--- a/railguns/templates/railguns/ui/detail.html
+++ b/railguns/templates/railguns/ui/detail.html
@@ -1,9 +1,24 @@
 {% extends './base.html' %}
-{% load static %}
 {% block structure %}{{ block.super }}<!--       ui/detail -->
 {% endblock %}
 
 {% block js %}{{ block.super }}
-    <!-- 💙 u/detail -->
-    <script src="{% static 'railguns/es2015/ui/detail.js' %}"></script>
+    <!-- 💙 ui/list -->
+    <script>
+        var vm = new Vue({
+            mixins: [base, get],
+            el: '#content',
+            data: {
+                object: ''
+            },
+            methods: {
+                onPrepare: function () {
+                    this.call.endpoint = this.$el.dataset.endpoint; // 从页面获取 Endpoint
+                },
+                onLoadSuccess: function onLoadSuccess(code, data) {
+                    this.object = data;
+                }
+            }
+        });
+    </script>
     <!-- 💛 自定义 js -->{% endblock %}
