--- a/railguns/templates/railguns/ui/detail.html
+++ b/railguns/templates/railguns/ui/detail.html
@@ -9,7 +9,7 @@
             mixins: [base, get],
             el: '#content',
             data: {
-                object: ''
+                object: undefined
             },
             methods: {
                 onPrepare: function () {
