--- a/railguns/templates/railguns/ui/text_field_update.html
+++ b/railguns/templates/railguns/ui/text_field_update.html
@@ -1,3 +1,12 @@
 {% extends './base.html' %}
 {% block structure %}{{ block.super }}<!--       ui/text_field_update -->
 {% endblock %}
+
+{% block content %}
+{% endblock %}
+
+{% block js %}{{ block.super }}
+    <!-- 💙 ui/text_field_update -->
+    <script>
+    </script>
+    <!-- 💛 自定义 js -->{% endblock %}
