--- a/railguns/templates/railguns/base_quick.html
+++ b/railguns/templates/railguns/base_quick.html
@@ -18,6 +18,8 @@
 
     <!-- 🍺 js 开始 -->{% block js %}
     <!-- 💙 base_quick -->
+    <!-- Django -->
+    <script src="{% url 'javascript-catalog' %}"></script>
     <!-- Vendor -->
     <script src="https://cdn.bootcss.com/babel-polyfill/7.2.5/polyfill.min.js"></script>
     <script src="https://cdn.bootcss.com/jquery/3.3.1/jquery.slim.min.js"></script>
