--- a/railguns/templates/railguns/ui/radio_update.html
+++ b/railguns/templates/railguns/ui/radio_update.html
@@ -5,10 +5,10 @@
 {% block content %}
     <option-set>
         <option-radio v-for="option, index in options" :key="index"
-                     :title="option[1]"
-                     :name="property"
-                     :value="option[0]"
-                     :id="index"></option-radio>
+                      :title="option[1]"
+                      :name="params[Object.keys(params)[0]]"
+                      :value="option[0]"
+                      :id="index"></option-radio>
     </option-set>
 {% endblock %}
 
@@ -19,23 +19,20 @@
             mixins: [base, patch],
             el: '#content',
             data: {
-                property: undefined, value: undefined, newValue: undefined, options: []
+                options: [], originalValue: undefined
             },
             updated() { // 组件挂载之后
                 document.querySelectorAll('input').forEach(it => {
                     if (it.attributes['type'].value === 'radio') {
                         // SO: https://stackoverflow.com/questions/11973678/difference-between-element-value-and-element-getattributevalue
-                        if (this.value.toString() === it.value) {
+                        const value = this.params[Object.keys(this.params)[0]]
+                        if (value.toString() === it.value) {
                             it.setAttribute('checked', 'checked')
                         }
                         it.onclick = event => {
-                            this.newValue = it.value
-                            if (this.value.toString() === this.newValue) { // === 无法判断数字
-                                console.warn('与之前相同, 不提交服务器更新')
-                                // history.back() // 只返回不刷新
-                            } else {
-                                this.submit()
-                            }
+                            const key = Object.keys(this.params)[0]
+                            this.params[key] = it.value
+                            this.smartsubmit(event)
                         }
                     }
                 })
@@ -44,32 +41,41 @@
                 onPrepare() {
                     const url = new URL(document.URL)
                     const resource = url.searchParams.get('resource')
-                    const property = url.searchParams.get('property')
-                    document.title += ` ${gettext(property)}`
-                    if (!resource || !property) {
-                        showAlert('请传入 resource 和 property')
+                    const name = url.searchParams.get('name')
+                    const value = url.searchParams.get('value')
+                    if (!resource || !name || !value) {
+                        showAlert('请传入 resource, name 和 value')
                         return
                     }
+                    document.title += ` ${gettext(name)}`
                     // 动态获取参数
                     httpUtilrequest('GET', '/api/v1/choices/', {
                         'resource': resource,
-                        'property': property
+                        'property': name
                     }, (code, data) => {
                         this.call.method = data.method
                         this.call.endpoint = data.endpoint
-                        this.property = data.property.name
-                        this.value = data.property.value
                         this.options = data.property.choices
+                        this.params = {[name]: value}
+                        this.originalValue = value
                     })
                 },
-                onSubmit() {
-                    this.params = {[this.property]: this.newValue}
-                },
                 onLoadSuccess(code, data) { // 默认模式是返回
-                    this.value = this.newValue
-                    // history.back()
-                    // location.replace(endpoint.replace('/api/v1/', '/'))
-                }
+                    this.originalValue = this.getValue()
+                    this.back()
+                },
+                // 💛 私有方法
+                getValue() {
+                    return this.params[Object.keys(this.params)[0]]
+                },
+                smartsubmit(event) {
+                    if (this.getValue() !== this.originalValue) {
+                        this.submit(event)
+                    } else {
+                        console.warn(JSON.stringify(this.params), '与之前相同, 不提交服务器更新')
+                        this.back()
+                    }
+                },
             }
         })
     </script>
