--- a/railguns/templates/railguns/base_quick.html
+++ b/railguns/templates/railguns/base_quick.html
@@ -8,7 +8,7 @@
 {% block web %}
     <!-- 🍺 css 开始 -->{% block css %}
     <!-- 💙 base_quick -->
-    <link rel="stylesheet" href="https://cdn.bootcss.com/normalize/8.0.1/normalize.min.css">{% endblock %}
+    <link rel="stylesheet" href="https://s2.pstatp.com/cdn/expire-1-M/normalize/8.0.1/normalize.min.css">{% endblock %}
     <!-- 🍻 css 结束 -->
 </head>
 
@@ -21,12 +21,12 @@
     <!-- Django -->
     <script src="{% url 'javascript-catalog' %}"></script>
     <!-- Vendor -->
-    <script src="https://cdn.bootcss.com/babel-polyfill/7.2.5/polyfill.min.js"></script>
-    <script src="https://cdn.bootcss.com/jquery/3.3.1/jquery.slim.min.js"></script>
-    <script src="https://cdn.bootcss.com/jquery.lazy/1.7.10/jquery.lazy.min.js"></script>
-    <script src="https://cdn.bootcss.com/moment.js/2.24.0/moment-with-locales.min.js"></script>
-    <script src="https://cdn.bootcss.com/numeral.js/2.0.6/numeral.min.js"></script>
-    <script src="https://cdn.bootcss.com/numeral.js/2.0.6/locales.min.js"></script>
+    <script src="https://s3.pstatp.com/cdn/expire-1-M/babel-polyfill/7.2.5/polyfill.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.3.1/dist/jquery.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/jquery-lazy@1.7.10/jquery.lazy.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/moment@2.24.0/min/moment-with-locales.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/numeral@2.0.6/min/numeral.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/numeral@2.0.6/min/locales.min.js"></script>
     <script src="{% static 'vendor/axios/axios.min.js' %}"></script>
 {% if debug %}    <script src="{% static 'vendor/vue/vue.js' %}"></script>{% else %}
     <script src="{% static 'vendor/vue/vue.min.js' %}"></script>{% endif %}
