--- a/railguns/templates/railguns/ui/radio_update.html
+++ b/railguns/templates/railguns/ui/radio_update.html
@@ -12,7 +12,7 @@
     </option-set>
 {% endblock %}
 
-{% block js %}{{ block.super }}
+{% block script %}{{ block.super }}
     <!-- 💙 ui/radio_update -->
     <script>
         const vm = new Vue({
@@ -79,4 +79,4 @@
             }
         })
     </script>
-    <!-- 💛 自定义 js -->{% endblock %}
+    <!-- 💛 自定义 script -->{% endblock %}
