--- a/railguns/templates/railguns/ui/base.html
+++ b/railguns/templates/railguns/ui/base.html
@@ -4,13 +4,13 @@
 {% block structure %}{{ block.super }}<!--     ui/base -->
 {% endblock %}
 
-{% block css %}{{ block.super }}
+{% block style %}{{ block.super }}
     <!-- 💙 ui/base -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@4.5.0/dist/css/swiper.min.css">
-    <link rel="stylesheet" href="https://res.wx.qq.com/open/libs/weui/2.0.0/weui.min.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.8.2/css/all.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@5.2.1/dist/css/swiper.min.css">
+    <link rel="stylesheet" href="https://res.wx.qq.com/open/libs/weui/2.1.3/weui.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.11.2/css/all.min.css">
     <link rel="stylesheet" href="{% static 'css/styles.css' %}">
-    <!-- 💛 自定义 css -->{% endblock %}
+    <!-- 💛 自定义 style -->{% endblock %}
 
 {% block body %}
     <!-- app bar 区域 -->
@@ -21,8 +21,8 @@
     </main>
 {% endblock %}
 
-{% block js %}{{ block.super }}<!-- 💙 ui/base -->
-    <script src="https://cdn.jsdelivr.net/npm/swiper@4.5.0/dist/js/swiper.min.js"></script>
-    <script src="https://res.wx.qq.com/open/libs/weuijs/1.1.4/weui.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.8.2/js/fontawesome.min.js"></script>
+{% block script %}{{ block.super }}<!-- 💙 ui/base -->
+    <script src="https://cdn.jsdelivr.net/npm/swiper@5.2.1/dist/js/swiper.min.js"></script>
+    <script src="https://res.wx.qq.com/open/libs/weuijs/1.2.1/weui.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.11.2/js/fontawesome.min.js"></script>
     <script src="{% static 'railguns/es2015/components/weui-components.js' %}"></script>{% endblock %}
