--- a/railguns/templates/railguns/ui/detail.html
+++ b/railguns/templates/railguns/ui/detail.html
@@ -2,7 +2,7 @@
 {% block structure %}{{ block.super }}<!--       ui/detail -->
 {% endblock %}
 
-{% block js %}{{ block.super }}
+{% block script %}{{ block.super }}
     <!-- 💙 ui/list -->
     <script>
         var vm = new Vue({
@@ -21,4 +21,4 @@
             }
         });
     </script>
-    <!-- 💛 自定义 js -->{% endblock %}
+    <!-- 💛 自定义 script -->{% endblock %}
