--- a/railguns/templates/railguns/ui/text_field_update.html
+++ b/railguns/templates/railguns/ui/text_field_update.html
@@ -12,7 +12,7 @@
     </form-area>
 {% endblock %}
 
-{% block js %}{{ block.super }}
+{% block script %}{{ block.super }}
     <!-- 💙 ui/text_field_update -->
     <script>
         const vm = new Vue({
@@ -54,4 +54,4 @@
             }
         })
     </script>
-    <!-- 💛 自定义 js -->{% endblock %}
+    <!-- 💛 自定义 script -->{% endblock %}
